--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,11 +51,11 @@ dependencies {
     // android libraries
     implementation "androidx.appcompat:appcompat:${propAndroidVersion}"
     implementation "androidx.appcompat:appcompat-resources:${propAndroidVersion}"
-    implementation "androidx.vectordrawable:vectordrawable:${propAndroidVersion}"
-    implementation "androidx.preference:preference:${propAndroidVersion}"
+    implementation "androidx.vectordrawable:vectordrawable:1.1.0"
+    implementation "androidx.preference:preference:1.2.1"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.material:material:1.9.0'
 
     // library to select file in android filesystem
     implementation 'com.github.angads25:filepicker:1.1.1'
@@ -66,8 +66,8 @@ dependencies {
     implementation 'com.github.lookfirst:sardine:5.9'
 
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-    implementation 'androidx.navigation:navigation-fragment:2.3.0'
-    implementation 'androidx.navigation:navigation-ui:2.3.0'
+    implementation 'androidx.navigation:navigation-fragment:2.5.3'
+    implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     // own Libraries
@@ -79,6 +79,6 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:${propEspressoVersion}"
     androidTestImplementation "androidx.test.espresso:espresso-intents:${propEspressoVersion}"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:${propEspressoVersion}"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
 }
