--- a/DBController/src/main/AndroidManifest.xml
+++ b/DBController/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (C) 2017-2022  Dominic Joas
+  ~ Copyright (C) 2017-2023  Dominic Joas
   ~
   ~ This program is free software; you can redistribute it and/or
   ~ modify it under the terms of the GNU General Public License
@@ -7,4 +8,6 @@
   ~ of the License, or (at your option) any later version.
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+</manifest>
